Fix wrong margin of last ReviewSimpleBlock

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -1674,9 +1674,6 @@ a {
     &--course-lectures {
         padding: 8px 10px;
         margin-bottom: 6px;
-        &:last-child {
-            margin-bottom: $section-padding;
-        }
         &.block--clicked {
             box-shadow: 0 3px 0 0 $color-block-shadow-dark;
             position: relative;
@@ -1936,9 +1933,6 @@ a {
     &--review-simple {
         padding: 8px 10px;
         margin-bottom: 6px;
-        a:last-child > & {
-            margin-bottom: $section-padding;
-        }
 
         & > div:first-child {
             color: $color-text-light;
